--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: instalando node
-      - uses: actions/setup-node@v6
+        uses: actions/setup-node@v6
         with:
           node-version: 24
           cache: 'npm'
       - name: testando node
-      - run: |
+        run: |
          node --version
          npm --version
       - name: executando arquivo
-      - run: |
+        run: |
           node higher_order_function.js
