--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -4,6 +4,11 @@ run-name: Iniciando
 
 on: [push]
 
+
+permissions:
+  contents: write
+
+
 jobs:
   on-push:
     runs-on: ubuntu-latest
@@ -15,10 +20,25 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: 24
+
+
       - name: testando node
         run: |
          node --version
          npm --version
+      
+      - name: Escrevendo no readme
+         run: |
+            echo "teste" > README.md
+
+      - name: commit automatico
+
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Atualização automática do README" || echo "Nada para commitar"
+          git push
       - name: executando arquivo
         run: |
           node higher_order_function.js
