--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -29,7 +29,8 @@ jobs:
        
       - name: Escrevendo no readme
         run: |
-            echo "teste" > README.md
+            echo "resultado da execução do script" > README.md
+            node higher_order_function.js >  README.md
 
       - name: commit automatico
         run: |
