--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -1,48 +1,47 @@
-name: Teste simples.
-run-name: Iniciando
+name: Teste simples
+run-name: Pipeline automático
 
-
-on: [push]
-
+on:
+  push:
+    paths-ignore:
+      - README.md
 
 permissions:
   contents: write
 
-
 jobs:
-  on-push:
-    name: teste simples
+  setup:
+    name: Setup 
     runs-on: ubuntu-latest
     steps:
-      - name: baixar código do repositório
         uses: actions/checkout@v4
-      
-      - name: instalando node
+      - name: Instalar Node
         uses: actions/setup-node@v6
         with:
           node-version: 24
 
+  teste:
+    name:  Test
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Instalar Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
 
-      - name: testando node
+      - name: Testar instalação
         run: |
-         node --version
-         npm --version
-       
-      
-      - name: Escrevendo no readme
-        run: |
-            echo "resultado da execução do script : " >> README.md
-            node higher_order_function.js >>  README.md
+          node --version
+          npm --version
 
-      - name: commit automatico
+  executar:
+    name: Executar 
+    needs: teste
+    runs-on: ubuntu-latest
+    steps:
+        uses: actions/checkout@v4
+      - name: Executar arquivo
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Atualização automática do README" || echo "Nada para commitar"
-          git push
-      
-      
-      - name: executando arquivo
-        run: |
-          node higher_order_function.js
+          node higher_order_function.js > resultado.txt
+
