--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         uses: actions/checkout@v4
+
       - name: Instalar Node
         uses: actions/setup-node@v6
         with:
@@ -20,18 +21,18 @@ jobs:
 
   test:
     name: Teste
-    runs-on: ubuntu-latest
     needs: setup
+    runs-on: ubuntu-latest
     steps:
-      - name: 🔍 Verificar Node
+      - name: Verificar Node
         run: |
           node --version
           npm --version
 
   executar:
     name: Executar
-    runs-on: ubuntu-latest
     needs: teste
+    runs-on: ubuntu-latest
     steps:
       - name: Executar script
         run: node higher_order_function.js
