--- a/.github/workflows/simples.yml
+++ b/.github/workflows/simples.yml
@@ -12,6 +12,7 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Instalar Node
@@ -29,9 +30,9 @@ jobs:
           node --version
           npm --version
 
-  executar:
+  run:
     name: Executar
-    needs: teste
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Executar script
